--- a/src/Componentes/Header/Header.css
+++ b/src/Componentes/Header/Header.css
@@ -8,7 +8,6 @@ ul{
 }
 
 .header{
-  height: 100px;
   background-color: var(--amarillo);
   font-size: 14px;
   font-family: proxima-nova, sans-serif;
@@ -18,145 +17,23 @@ ul{
   height: 100%;
   margin: 0 auto;
   max-width: 1200px;
-  display: grid;
-  grid-template-columns: .9fr 3fr 1.5fr;
 }
 
-.logo{
-  display: flex;
-  align-items: center;
-}
-.logo-img{
-  height: 34px;
-}
-
-.header_envio{
-  width: fit-content;
-  height: 40px;
-  display: flex;
-  position: relative;
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  border: 1px solid transparent;
-  padding: 5px 8px;
-  border-radius: 5px;
-  cursor: pointer;
-}
-
-.header_envio:hover{
-  border-color: #eadd61;
-}
-
-.envio_usuario{
-  color: var(--negro-opaco);
-  font-size: 12px;
-  font-family: proxima-nova, sans-serif;
-  font-style: normal;
-  font-weight: 100;
-}
-
-.envio_usuario::before{
-  font-family: FontAwesome;
-  content: "\f3c5";
-  position: absolute;
-  top: 5px;
-  left: 8px;
-  font-size: 23px;
- 
-}
-
-.envio_usuario,.envio_direccion{
-  padding-left: 20px;
-}
-
-.header_menu-list,.header_menu-nav{
-  display: flex;
-  align-items: center;
-}
-
-.header_ul{
-  list-style: none;
-  padding: 0;
-  display: flex;
-}
-
-.header_menu-list{
-  color: var(--negro-opaco);
-}
-
-.menu-list-item,.menu-nav-item{
-  position: relative;
-  margin-right: 18px;
-  display: flex;
-  white-space: nowrap;
-  height: 40px;
-  line-height: 40px;
-  cursor: pointer;
-}
-
-.menu-list-item:hover{
-  color: black;
-  transition: color .3s ease-out;
-}
-
-.menu-nav_icon{
-  font-size: 23px;
-  align-self: start;
-  margin-right: 3px;
-  margin-top: 3px;
-}
-
-.icon{
-  align-self: center;
-  font-size: 18px;
-}
-
-/* .chevron::after{
-  font-family: FontAwesome;
-  content:"\f078";
-  position: absolute;
-
-  font-size: 10px;
-  color: var(--negro-opaco);
-} */
-
-.chevron{
-  width: 6px;
-  height: 6px;
-  transform: rotate(45deg);
-  border-style: solid;
-  border-width: 0 1.5px 1.5px 0;
-  margin:16px 6px;
-  border-color: rgba(0, 0, 0, .3);
-}
-
-/*disney img*/
-
-.header_disney{
-  display: flex;
-  align-items: center;
-}
-.disney-img{
-  max-width: 340px;
-  max-height: 39px;
-}
-
-/*search*/
+/*Search*/
 .search{
   position: relative;
-  max-width: 600px;
+  /* max-width: 600px; */
   /* height: 56px; */
   display: flex;
   align-items: center;
+  align-self: center;
 }
 
 .search_input{
+  height: 100%;
   width: 100%;
-  height: 39px;
   border: rgba(0,0,0,.2);
   box-shadow: 0 1px 2px rgba(0,0,0,.2);
-  padding: 5px 40px 5px 15px;
 }
 
 .search_input::placeholder{
@@ -166,25 +43,216 @@ ul{
 
 .search_button{
   position: absolute;
-  right: 1px;
-  width: 46px;
-  height: 39px;
   border: rgba(0,0,0,.2);
   background-color: white;
   padding: 0;
-}
-
-.search_button::before{
-  content: "";
-  border: 1px solid rgba(0, 0, 0, .1);
-  position: absolute;
-  height: 26px;
-  top: 6.5px;
-  left: 0;
 }
 
 .search_button::after{
   font-family: FontAwesome;
   content: "\f002";
   color: var(--negro-opaco);
+}
+
+@media (max-width:1023px){
+  .header{
+    height: 45px;
+  }
+  .header-container{
+    display: grid;
+    grid-template-columns: 60px 5fr 55px 55px;
+    justify-items: center;
+    align-items: center;
+  }
+
+  .logo{
+    background: url(../../img/logo__small.png);
+    background-repeat: no-repeat;
+    height: 32px;
+    width: 44px;
+  }
+
+  .icon{
+    /* justify-self: center;
+    align-self: center; */
+    font-size: 22px;
+  }
+
+  .search{
+    width: 100%;
+    height: 32px;
+  }
+
+  .search_button,.search_input{
+    height: 100%;
+  }
+
+  .search_button{
+    left: 1px;
+    width: 35px;
+  }
+
+  .search_input{
+      padding: 5px 5px 5px 35px;
+  }
+
+}
+
+@media (min-width:1024px){  
+  .header{
+    height: 100px;
+  }
+  .header-container{
+    display: grid;
+    grid-template-columns: .9fr 3fr 1.5fr;
+  }
+  
+  .logo{
+    background-image: url(../../img/logo.png);
+    background-repeat: no-repeat;
+    background-position: center;
+    display: flex;
+    align-items: center;
+  }
+  .logo-img{
+    height: 34px;
+  }
+  
+  .header_envio{
+    width: fit-content;
+    height: 40px;
+    display: flex;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    border: 1px solid transparent;
+    padding: 5px 8px;
+    border-radius: 5px;
+    cursor: pointer;
+  }
+  
+  .header_envio:hover{
+    border-color: #eadd61;
+  }
+  
+  .envio_usuario{
+    color: var(--negro-opaco);
+    font-size: 12px;
+    font-family: proxima-nova, sans-serif;
+    font-style: normal;
+    font-weight: 100;
+  }
+  
+  .envio_usuario::before{
+    font-family: FontAwesome;
+    content: "\f3c5";
+    position: absolute;
+    top: 5px;
+    left: 8px;
+    font-size: 23px;
+   
+  }
+  
+  .envio_usuario,.envio_direccion{
+    padding-left: 20px;
+  }
+  
+  .header_menu-list,.header_menu-nav{
+    display: flex;
+    align-items: center;
+  }
+  
+  .header_ul{
+    list-style: none;
+    padding: 0;
+    display: flex;
+  }
+  
+  .header_menu-list{
+    color: var(--negro-opaco);
+  }
+  
+  .menu-list-item,.menu-nav-item{
+    position: relative;
+    margin-right: 18px;
+    display: flex;
+    white-space: nowrap;
+    height: 40px;
+    line-height: 40px;
+    cursor: pointer;
+  }
+  
+  .menu-list-item:hover{
+    color: black;
+    transition: color .3s ease-out;
+  }
+  
+  .menu-nav_icon{
+    font-size: 23px;
+    align-self: start;
+    margin-right: 3px;
+    margin-top: 3px;
+  }
+  
+  .icon{
+    align-self: center;
+    font-size: 18px;
+  }
+  
+  /* .chevron::after{
+    font-family: FontAwesome;
+    content:"\f078";
+    position: absolute;
+  
+    font-size: 10px;
+    color: var(--negro-opaco);
+  } */
+  
+  .chevron{
+    width: 6px;
+    height: 6px;
+    transform: rotate(45deg);
+    border-style: solid;
+    border-width: 0 1.5px 1.5px 0;
+    margin:16px 6px;
+    border-color: rgba(0, 0, 0, .3);
+  }
+  
+  /*disney img*/
+  
+  .header_disney{
+    display: flex;
+    align-items: center;
+    justify-self: center;
+  }
+  .disney-img{
+    max-width: 340px;
+    max-height: 39px;
+  }
+  
+  /*Search*/
+  .search{
+    max-width: 600px;
+    height: 39px;
+  }
+
+  .search_button{
+    width: 46px;
+    height: 39px;
+    right: 1px;
+  }
+
+  .search_input{
+    padding: 5px 40px 5px 15px;
+  }
+
+  .search_button::before{
+    content: "";
+    border: 1px solid rgba(0, 0, 0, .1);
+    position: absolute;
+    height: 26px;
+    top: 6.5px;
+    left: 0;
+  }
 }
