--- a/src/Componentes/Header/Header.css
+++ b/src/Componentes/Header/Header.css
@@ -56,7 +56,7 @@ ul{
 
 @media (max-width:1023px){
   .header{
-    height: 45px;
+    height: 50px;
   }
   .header-container{
     display: grid;
@@ -94,6 +94,29 @@ ul{
 
   .search_input{
       padding: 5px 5px 5px 35px;
+  }
+
+  .header_envio{
+    height: 39px;
+    width: 100%;
+    background-color: #fff159;
+    border-top: 1px solid rgba(0,0,0,.1);
+    position: relative;
+    display: flex;
+    align-items: center;
+    padding: 0 28px ;
+    font-size: 13px;
+    color: #736c28
+  }
+
+  .envio_usuario::before{
+    font-family: FontAwesome;
+    content: "\f3c5";
+    position: absolute;
+    top: 10px;
+    left: 8px;
+    font-size: 16px;
+    color: #817827;
   }
 
 }
@@ -151,7 +174,6 @@ ul{
     top: 5px;
     left: 8px;
     font-size: 23px;
-   
   }
   
   .envio_usuario,.envio_direccion{
