--- a/src/Componentes/DropDownUsuario/DropDownUsuario.css
+++ b/src/Componentes/DropDownUsuario/DropDownUsuario.css
@@ -6,6 +6,7 @@
   background-color: white;
   border-radius: 3px;
   box-shadow: 0 15px 20px 0 rgb(0 0 0 / 8%), 0 1px 4px 0 rgb(0 0 0 / 8%);
+  z-index: 10;
 }
 
 .user-menu::before{
