--- a/src/Componentes/Header/Header.css
+++ b/src/Componentes/Header/Header.css
@@ -11,6 +11,7 @@ ul{
   background-color: var(--amarillo);
   font-size: 14px;
   font-family: proxima-nova, sans-serif;
+  z-index: 10;
 }
 
 .header-container{
