--- a/src/Componentes/Producto/Producto.css
+++ b/src/Componentes/Producto/Producto.css
@@ -1,8 +1,13 @@
 .producto{
   margin-top: 10px;
   width: 100%;
-  height: 50px;
-  background-color: white;
-  border-radius: 3px;
-  box-shadow: 0 1px 2px 0 rgb(0 0 0 / 25%);
+  padding: 16px;
+}
+
+@media screen and (min-width:1024px) {
+  .producto{
+    background-color: white;
+    border-radius: 3px;
+    box-shadow: 0 1px 2px 0 rgb(0 0 0 / 25%);
+  }
 }
