--- a/src/Componentes/Producto/Producto.css
+++ b/src/Componentes/Producto/Producto.css
@@ -4,6 +4,31 @@
   padding: 16px;
 }
 
+.verify-icon{
+  color: #3483fa;
+}
+
+.verify{
+  display: flex;
+  align-items: center;
+}
+
+.verify span{
+  color: #3483fa;
+  margin:0 2px;
+}
+
+
+@media screen and (max-width:1023px){
+  .title{
+    font-size: 16px;
+    font-weight: normal;
+  }
+
+  .verify,.subtitle{
+    font-size: 12px;
+  }
+}
 @media screen and (min-width:1024px) {
   .producto{
     background-color: white;
@@ -49,17 +74,8 @@
   .verify{
     font-size: 14px;
     color: rgba(0,0,0,.55);
-    display: flex;
-    align-items: center;
   }
 
-  .verify-icon{
-    color: #3483fa;
-  }
 
-  .verify span{
-    color: #3483fa;
-    margin:0 2px;
-  }
 
 }
