--- a/src/Componentes/Producto/Producto.css
+++ b/src/Componentes/Producto/Producto.css
@@ -1,5 +1,5 @@
 .producto{
-  margin-top: 10px;
+  /* margin-top: 10px; */
   width: 100%;
   padding: 16px;
 }
@@ -31,6 +31,7 @@
 }
 @media screen and (min-width:1024px) {
   .producto{
+    margin-top: 10px;
     background-color: white;
     border-radius: 3px;
     box-shadow: 0 1px 2px 0 rgb(0 0 0 / 25%);
